--- a/Microscopy Data.Rmd
+++ b/Microscopy Data.Rmd
@@ -28,8 +28,14 @@ PA01mut<- c('4-23-19')
 names3<-c('rep1','rep2','rep3')
 names2<-c('rep1','rep2')
 names1<-c('rep1')
-figuresPath<-"/Users/jupabago/Documents/Whiteley/PROJECTS/PaSaProject/Figures"#this is to save the figures as I am making them
+figuresPath<-"/Users/jupabago/Documents/Whiteley/PROJECTS/PaSaProject/Figures1"#this is to save the figures as I am making them
 
+GetNumber<-function(idx){
+  if (idx<10){
+    idx = paste0(0,idx)
+  }
+  return (idx)
+}
 ```
 
 
@@ -76,26 +82,108 @@ Pa01mutThresholds<-MapThreshold(PA01mut, names1)
 thresholdData<-rbind(wtThresholds,mutThresholds,Pa01Thresholds,Pa01mutThresholds)
 
 #This is to get an idea of the thresholding levels
-#this is for all samples
+#this is for all samples of Pa 
 ggplot()+
   geom_jitter(data=thresholdData %>% filter(Species=="Pa"),height = 0, width = .1, aes(x=TimePoint, y=Value, shape = Sample, color = Strain), size=3)+
   facet_grid(.~Condition)
 #This is only for PA14 since they seem to be the most consistent
+PA14thresholdData <-thresholdData%>%filter(Species=="Pa") %>% filter(Strain %in% c("PA14wt", "PA14mut")) %>% group_by(Position, TimePoint, Strain, Condition, Species)%>% summarise(MeanThreshold = mean(Value), SDThreshold = sd(Value))
+PA14average<-PA14thresholdData %>% group_by(Position, Strain, Condition, Species)%>% summarise(MeanThreshold = mean(MeanThreshold), SDThreshold = sd(MeanThreshold))
+
 ggplot()+
-  geom_jitter(data=PA14thresholdData %>% filter(Species=="Pa"),height = 0, width = .1, aes(x=TimePoint, y=Value, shape = Sample, color = Strain), size=3)+
+  geom_point(data=thresholdData %>% filter(Species=="Pa")%>% filter(Strain %in% c("PA14wt", "PA14mut")), aes(x=TimePoint, y=Value, shape = Sample, color = Strain), size=2)+
+  geom_line(data=PA14thresholdData,aes(x = TimePoint, y = MeanThreshold, color =Strain), size = 1)+
+  geom_errorbar(data=PA14thresholdData,aes(x = TimePoint, ymin = MeanThreshold-SDThreshold, ymax = MeanThreshold+SDThreshold, color = Strain), width=.5, size = .5)+
+  geom_hline(data = PA14average, aes(yintercept = MeanThreshold, color = Strain), size = 3)+
   facet_grid(.~Condition)
 
-PA14thresholdData <-thresholdData%>%filter(Species=="Pa") %>% filter(Strain %in% c("PA14wt", "PA14mut"))
+#Now we do Staph
+SathresholdData <-thresholdData%>%filter(Species=="Sa") %>% group_by(Position, TimePoint, Strain, Condition, Species)%>% summarise(MeanThreshold = mean(Value), SDThreshold = sd(Value))
+Saaverage<-SathresholdData %>% group_by(Position, Strain, Condition, Species)%>% summarise(MeanThreshold = mean(MeanThreshold), SDThreshold = sd(MeanThreshold))
 
 
+ggplot()+
+  geom_point(data=thresholdData %>% filter(Species=="Sa"), aes(x=TimePoint, y=Value, shape = Sample, color = Strain), size=2)+
+  geom_line(data=SathresholdData,aes(x = TimePoint, y = MeanThreshold, color =Strain), size = 1)+
+  geom_errorbar(data=SathresholdData,aes(x = TimePoint, ymin = MeanThreshold-SDThreshold, ymax = MeanThreshold+SDThreshold, color = Strain), width=2, size = .1)+
+  geom_hline(data = Saaverage, aes(yintercept = MeanThreshold, color = Strain), size = 3)+
+  facet_grid(.~Condition)
 
-  #scale_y_log10(name=expression(paste('CFUs per mL' )), breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
-  #geom_vline(xintercept=3, linetype = "dashed")+
-  #annotate("text", x = 3, y = 10e6, label = "TOB added")+
-  #labs(title =expression(paste(italic("S. aureus"), " growth in mono or coculture in SCFM2 with 128 ug/mL TOB")), x = "Time (hours)",shape = "Culture condition", color = "Antiobiotic/Control") 
+```
+
+
+```{r threshold weighted growth curves}
+#These are the dataframes that we need to merge
+thresholdResultsDf<-merge(cleanResults, thresholdData) %>% mutate(WeightedLogValue = Value*LogTotals) %>% mutate(WeightedValue = Value *Totals) %>% mutate(correctedWeightedLogValue = WeightedLogValue+5) 
+
+thresholdData$Condition<-as.factor(thresholdData$Condition)
+ boundData$Condition<-as.factor(boundData$Condition)
+  ggplot()+
+    geom_point(data=thresholdResultsDf%>% filter(Species == "Pa"), aes(x=TimePoint, y=correctedWeightedLogValue,  shape = Sample), size=2)+
+    geom_point(data=cleanResults%>% filter(Species == "Pa"), aes(x=TimePoint, y=LogTotals,  shape = Sample), size=2, color = "red")+
+    facet_grid(Strain~Condition)
+  
+ggplot()+
+    geom_point(data=thresholdResultsDf%>% filter(Species == "Sa"), aes(x=TimePoint, y=correctedWeightedLogValue,  shape = Sample), size=2)+
+    geom_point(data=cleanResults%>% filter(Species == "Sa"), aes(x=TimePoint, y=LogTotals,  shape = Sample), size=2, color = "red")+
+    facet_grid(Strain~Condition)
+
+#Linear regressions
+#First get a df with only Sa Mono Red Channel
+SaMonoTrhesholdDf<-thresholdData%>% filter(Condition == "Sa Mono") %>% filter(Species == "Sa")
+
+#Linear regression for Thresholds
+lm(SaMonoTrhesholdDf$Value ~ SaMonoTrhesholdDf$TimePoint) 
+plot(SaMonoTrhesholdDf$TimePoint, SaMonoTrhesholdDf$Value)
+abline( 0.18154, 0.00819 )
+
+#Linear regression for Weighted Growth Curves
+SaMonoWeightedGrowthCurve<-thresholdResultsDf%>% filter(Condition == "Sa Mono") %>% filter(Species == "Sa")
+lmWeighted<-lm(SaMonoWeightedGrowthCurve$WeightedLogValue ~ SaMonoWeightedGrowthCurve$TimePoint) 
+plot(SaMonoWeightedGrowthCurve$TimePoint, SaMonoWeightedGrowthCurve$WeightedLogValue)
+abline( 1.01962, 0.06641 )
+
+#Non-linear model
+ggplot()+
+  geom_smooth(data=SaMonoTrhesholdDf, aes(x=TimePoint, y=Value), size=2)+
+  geom_point(data=SaMonoTrhesholdDf, aes(x=TimePoint, y=Value), size=2)
+
+ggplot()+
+  geom_smooth(data=SaMonoTrhesholdDf, method = lm, aes(x=TimePoint, y=Value), size=2)+
+  geom_point(data=SaMonoTrhesholdDf, aes(x=TimePoint, y=Value), size=2)
+    
+#Now do the same for Pa
+Pa14wtMonoTrhesholdDf<-thresholdData%>% filter(Condition == "Pa Mono") %>% filter(Species == "Pa") %>% filter(Strain == "PA14wt")
+Pa14mutMonoTrhesholdDf<-thresholdData%>% filter(Condition == "Pa Mono") %>% filter(Species == "Pa") %>% filter(Strain == "PA14mut")
+#Linear regression for Thresholds PA14wt
+lm(Pa14wtMonoTrhesholdDf$Value ~ Pa14wtMonoTrhesholdDf$TimePoint) 
+plot(Pa14wtMonoTrhesholdDf$TimePoint, Pa14wtMonoTrhesholdDf$Value)
+abline( 0.08775, -0.001566 )
+
+lm(Pa14mutMonoTrhesholdDf$Value ~ Pa14mutMonoTrhesholdDf$TimePoint) 
+plot(Pa14mutMonoTrhesholdDf$TimePoint, Pa14mutMonoTrhesholdDf$Value)
+abline( 0.082315, -0.001234 )
+
+#Non-linear model
+#PA14wt
+ggplot()+
+  geom_smooth(data=Pa14wtMonoTrhesholdDf, method = lm, aes(x=TimePoint, y=Value), size=2)+
+  geom_point(data=Pa14wtMonoTrhesholdDf, aes(x=TimePoint, y=Value), size=2)
+ggplot()+
+  geom_smooth(data=Pa14wtMonoTrhesholdDf, aes(x=TimePoint, y=Value), size=2)+
+  geom_point(data=Pa14wtMonoTrhesholdDf, aes(x=TimePoint, y=Value), size=2)
+#PA14mut
+ggplot()+
+  geom_smooth(data=Pa14mutMonoTrhesholdDf, method = lm, aes(x=TimePoint, y=Value), size=2)+
+  geom_point(data=Pa14mutMonoTrhesholdDf, aes(x=TimePoint, y=Value), size=2)
+ggplot()+
+  geom_smooth(data=Pa14mutMonoTrhesholdDf, aes(x=TimePoint, y=Value), size=2)+
+  geom_point(data=Pa14mutMonoTrhesholdDf, aes(x=TimePoint, y=Value), size=2)
 
 
 ```
+
+
 
 ```{r biomass functions}
 MapResults<- function(listSamples, reps){
@@ -153,7 +241,7 @@ GraphSlices<-function (data, bug, facete){
   if(bug=="Pa"){data<-data %>% filter(Species == "Pa")%>% filter(!Condition == "Sa Mono");nombre<-"P. aeruginosa"}
   #then what kind of facet can be used
   if(missing(facete)){facete=facet_grid(Condition~TimePoint);condicion <- "Strain";forma <- NULL}
-  else{facete <-facet_wrap(~TimePoint,ncol = 6 );condicion <- "Condition";forma<-"Strain"}
+  else{facete <-facet_wrap(.~TimePoint,ncol = 6 );condicion <- "Condition";forma<-"Strain"}
   ggplot()+
     geom_point(data=data, aes_string(x="ZDistance", y="Value", color = condicion, shape = forma),size=1)+
     scale_y_log10(name=expression(paste('Biomass from voxel counts' )), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
@@ -162,7 +250,7 @@ GraphSlices<-function (data, bug, facete){
     facete
 }
 
-ggsave("Sa z-slice condition-timepoint.png", plot = GraphSlices(ResultsData, "Sa"), path = figuresPath)
+ggsave("Sa z-slice condition-timepoint1.png", plot = GraphSlices(ResultsData, "Sa"), path = figuresPath)
 ggsave("Sa z-slice timepoint.png", plot = GraphSlices(ResultsData, "Sa", "BLAH"), path = figuresPath)
 ggsave("Pa z-slice condition-timepoint.png", plot = GraphSlices(ResultsData, "Pa"), path = figuresPath)
 ggsave("Pa z-slice timepoint.png", plot = GraphSlices(ResultsData, "Pa", "BLAH"), path = figuresPath)
@@ -175,7 +263,7 @@ GraphSlicesTime<-function(datos, bug, strain){
     geom_point(data=datos %>% filter(Strain == strain) , aes(x=ZDistance, y=Value, color = TimePoint),size=1)+
     scale_y_log10(name=expression(paste('Biomass from voxel counts' )), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
     labs(title =paste(bug, "biomass value per slice in SCFM2 using",strain  ),  x = "Distance from bottom (z-slice)")+
-    facet_grid(Condition~Sample)
+    facet_grid(Sample~Condition)
 }
 
 ggsave("Sa z-slice PA14wt grid.png", plot = GraphSlicesTime(ResultsData, "Sa", "PA14wt"), path = figuresPath)
@@ -192,6 +280,7 @@ Remember that all mono cultures of Sa are essentially the same: Same strain, sam
 cleanResults<-ResultsData %>% group_by(TimePoint,Sample,Strain,Condition,Species) %>% summarise(Totals = sum (Value))%>% mutate(LogTotals = ifelse(Totals>0, log10(Totals), 0))
 cleanResultsStats<-cleanResults %>% group_by(TimePoint,Strain,Condition,Species) %>% summarise(MeanTotals = mean(Totals), MeanLogTotals = mean(LogTotals), SDTotals = sd(Totals),SDLogTotals = sd(LogTotals)) 
 
+#This is just to check the difference between the mean log and the log of the mean, which are quite different as it turns out...
 cleanResultsStats1<-cleanResultsStats %>% mutate(CheckLog = MeanLogTotals^10) %>% mutate(CheckLog2 = log10(MeanTotals)) %>% mutate(DiffLog = abs(MeanLogTotals-CheckLog2)) %>% mutate(DiffTotals = abs(MeanTotals - CheckLog))
 
 
@@ -206,7 +295,7 @@ GraphGrowthCurves<-function (dataRaw, dataStats, bug){
     geom_line(data=dataStats, aes(x=TimePoint, y=MeanTotals),  color = "Red", size=2)+
     scale_y_log10(limits= c(1e4,1e7), name=expression(paste('Biomass from voxel counts' )), breaks = c(10^(seq(5,10,.5))), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
     labs(title =paste(bug, " growth in mono in SCFM2" ),  x = "Time (hours)",shape = "Culture condition", color = "Antiobiotic/Control")+
-    facet_grid(Condition~Strain)
+    facet_grid(Strain~Condition)
 }
 GraphGrowthCurvesExp<-function (dataRaw,dataStats, bug){
   if(bug=="Sa"){dataRaw<-dataRaw %>% filter(Species == "Sa")%>% filter(!Condition == "Pa Mono");
@@ -218,7 +307,7 @@ GraphGrowthCurvesExp<-function (dataRaw,dataStats, bug){
     geom_point(data=dataStats, aes(x=TimePoint, y=MeanLogTotals),  color = colore, size=2)+
     geom_line(data=dataStats, aes(x=TimePoint, y=MeanLogTotals),  color = colore, size=2)+
     labs(title =paste(bug, " growth in SCFM2" ),  x = "Time (hours)",shape = "Culture condition", color = "Antiobiotic/Control")+
-    facet_grid(Condition~Strain)
+    facet_grid(Strain~Condition)
 }
 GraphGrowthCurvesExpClean<-function (dataRaw, dataStats, bug){
   if(bug=="Sa"){dataStats<-dataStats %>% filter(Species == "Sa")%>% filter(!Condition == "Pa Mono");colore<-"Red"}
@@ -227,7 +316,7 @@ GraphGrowthCurvesExpClean<-function (dataRaw, dataStats, bug){
     geom_point(data=dataStats, aes(x=TimePoint, y=MeanLogTotals,  color = Condition), size=2)+
     geom_line(data=dataStats, aes(x=TimePoint, y=MeanLogTotals,  color = Condition), size=2)+
     labs(title =paste(bug, " growth in SCFM2" ),  x = "Time (hours)",shape = "Culture condition", color = "Antiobiotic/Control")+
-    facet_grid(.~Strain)
+    facet_grid(Strain~.)
 }
 
 GraphGrowthCurvesExp(cleanResults,cleanResultsStats, "Sa")
@@ -337,7 +426,9 @@ ggplot()+
 
 ```
 ## Including Plots
+
 ```{r aggregates}
+
 MapAggregates<- function(listSamples, reps){
   mappedData<-map2(listSamples, reps, GetAggregates)
   boundData<-bind_rows(mappedData)
@@ -375,17 +466,14 @@ Pa01Results<-MapAggregates(PA01wt, names2)
 Pa01mutResults<-MapAggregates(PA01mut, 'rep1')
 
 
+
 ```
 You can also embed plots, for example:
 
 ```{r support functions, echo=FALSE}
 
-GetNumber<-function(idx){
-  if (idx<10){
-    idx = paste0(0,idx)
-  }
-  return (idx)
-}
+
+
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
